[tool.poetry]
name = "commandgpt"
version = "0.1.0"
description = "A commandline tool that integrates with OpenAI to help find the right commands"
authors = ["Tommy Clark <tommy.clark@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.196" 
openai = "0.27.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "commandgpt:runApplication"
